[package]
name = "kolib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.24.0", features = ["serde", "v7"] }

[dev-dependencies]
tokio = { version = "1.52.4", features = ["macros", "rt-multi-thread"] }
